# 150project

./: .gitignore
Bomberman guide/: Bomberman-guide.cabal  CHANGELOG.md  index.html
Bomberman guide/app/: Main.hs  index.html
Bomberman guide/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
CS attempt one/: CHANGELOG.md  CS-attempt-one.cabal
CS attempt one/app/: Client.hs  Common.hs  Main.hs  Server.hs
Canva + JavaScript Guide/: CHANGELOG.md  Canva-JavaScript-Guide.cabal  index.html
Canva + JavaScript Guide/app/: Main.hs
Canva + JavaScript Guide/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Client-Server Version/haskell-project-sample/: attempt3.cabal  cabal.project
Client-Server Version/haskell-project-sample/app/: Client.hs  Common.hs  Main.hs  Server.hs
Client-Server Version/my_game/: CHANGELOG.md  my-game.cabal
Client-Server Version/my_game/client/: Main.hs
Client-Server Version/my_game/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Client-Server Version/my_game/dist-newstyle/packagedb/ghc-9.8.2/: my-game-0.1.0.0-inplace.conf  package.cache
Client-Server Version/my_game/shared/Game/: Types.hs
Miso Demo/: CHANGELOG.md  Miso-Demo.cabal
Miso Demo/app/: Main.hs
Miso Demo/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
Miso Demo/dist-newstyle/src/: miso-7fdae9da4bdb552ef2daf21700284a28ca9d60f6abf96b737c89243d4bad27dc.cache
Phase 1/: CHANGELOG.md  Phase1.cabal  cabal.project.local  index.html
Phase 1/app/: DELETE view guides.hs  Main.hs
Phase 1/dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-project/: haskell-project.cabal
haskell-project/app/: Client.hs  Common.hs  Main.hs  Server.hs
haskell-project/dist-newstyle/cache/: config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-project/dist-newstyle/src/: miso-7fdae9da4bdb552ef2daf21700284a28ca9d60f6abf96b737c89243d4bad27dc.cache
my_game/: client.html
my_game/client/: Main.hs
my_game/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
my_game/dist-newstyle/packagedb/ghc-9.8.2/: my-game-0.1.0.0-inplace.conf  package.cache
my_game/server/: Main.hs
my_game/shared/Game/: Types.hs
phase2/haskell-project/: haskell-project.cabal
phase2/haskell-project/app/: Main.hs  Server.hs
