cabal-version:      3.14
name:               Bomberman-guide
version:            0.1.0.0
license:            NONE
author:             Brent Morales
maintainer:         bomorales@up.edu.ph
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Bomberman-guide
    import:           warnings
    main-is:          Main.hs
    
    build-depends:    
        base ^>=4.19.1.0,
        miso >= 1.8.0.0,
        containers >= 0.6,
        text >= 1.2
    
    hs-source-dirs:   app
    default-language: Haskell2010
