cabal-version:      3.16
name:               Bomberman-guide
version:            0.1.0.0
license:            NONE
author:             Brent Morales
maintainer:         bomorales@up.edu.ph
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Bomberman-guide
    import:           warnings
    main-is:          Main.hs
    
    build-depends:    
        base >=4.14 && <5,
        reflex >=0.8,
        reflex-dom >=0.6,
        ghcjs-dom >=0.9,
        containers >=0.6,
        text >=1.2,
        time >=1.9,
        mtl >=2.2
    
    hs-source-dirs:   app
    default-language: Haskell2010

    if impl(ghcjs)
        build-depends: ghcjs-base
        
    ghc-options: -Wall

    

