cabal-version:       3.14
name:                my-game
version:             0.1.0.0
build-type:          Simple
license:             NONE
author:              Brent Morales
maintainer:          bomorales@up.edu.ph
extra-doc-files:     CHANGELOG.md

common shared
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
    , base          >=4.14 && <5
    , aeson         >=2.0
    , text          >=1.2
    , containers    >=0.6

library
  import:          shared
  hs-source-dirs:  shared
  exposed-modules: Game.Types
  build-depends:
    , aeson         >=2.0

executable game-server
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: server
  build-depends:
    , my-game
    , wai           >=3.2
    , wai-websockets >=3.0
    , warp          >=3.3
    , websockets    >=0.12
    , stm           >=2.5
    , bytestring    >=0.10
    , random        >=1.2
    , http-types    >=0.12

executable game-client
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: client
  build-depends:
    , my-game
    , miso          >=1.8
    , ghcjs-base
  if impl(ghcjs)
    buildable: True
  else
    buildable: False
